# PythonAI

./: .funcignore  .gitignore  host.json  requirements.txt
AutogenPluginWriter/: AutogenPluginWriter.sln
AutogenPluginWriter/Agents/: AgentServer.py  DevOpsAgentForce.py  DevOpsStoryUploader.py  Prompts.py
BrowserUse/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
BrowserUse/docker/: Dockerfile.playwright-vnc  start-playwright-vnc.sh
BrowserUse/scenarios/: default.json  mfa_code.txt  prompt.txt
BrowserUse/src/: browser_use_step.py  config.py  live_progress.py  mcp_checks.py  reporting.py  run_tests.py
BrowserUse/templates/: report.html.j2
DataversePythonSDK/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.ps1
DataversePythonSDK/src/dataverse_mcp_server/: __init__.py  server.py
DataversePythonSDKCore/: .env.example
DockerSelfHost/: Dockerfile  mymistreal.ps1  prompt.txt
DocumentComparison/: Code Interpreter.docx  WF2.pdf.json  World Charities Organization.docx  data.json  metadataWA.xlsx
MagenticUI/: .env.azure.example  .gitignore  README.md  Start-MagenticUI.ps1  config.azure-openai.yaml
MagenticUI/prompt-http-server/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
MagenticUI/sharepoint-prompt-mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  verify_mcp.py
Skills/01.Dataverse/: .gitignore
Vid2Pdf/: LLMBlobHelper.py  __init__.py  function.json  sample_summary.html
alm-mcp/: Dockerfile
(+18 files in other folders)
