[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataverse-mcp-server"
version = "0.1.0"
description = "Bulk operations MCP server for Microsoft Dataverse using the official Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.13.0",
  "PowerPlatform-Dataverse-Client>=0.1.0b3",
  "azure-identity>=1.20.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
dataverse-mcp-server = "dataverse_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
